feat: swagger конфигурация
